<resources>
    <!--<string name="app_name">懒猫TV</string>-->
    <string name="app_name">影檬TV</string>
    <string name="lemon95_dialog_title">提示</string>
    <string name="lemon95_dialog_net_msg">网络断开，请检查网络连接！</string>
    <string name="lemon95_dialog_cancal">取消</string>
    <string name="lemon95_dialog_net_ok">检测网络!</string>
    <string name="lemon95_login_msg">未登录</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="lemon95_search">搜索</string>
    <string name="lemon95_hot_search">热门搜索</string>
    <string name="lemon95_menu1">用户</string>
    <string name="lemon95_menu2">每日推荐</string>
    <string name="lemon95_menu3">影视分类</string>
    <string name="lemon95_menu4">关于我们</string>
    <string name="lemon95_play_re">播放记录</string>
    <string name="lemon95_user_msg">用户信息</string>
    <string name="lemon95_qp">求片记录</string>
    <string name="lemon95_sc">收藏记录</string>
    <string name="lemon95_movie">电影</string>
    <string name="lemon_movie_details_msg">看此影片的还在看</string>
    <string name="lemon_play">立即播放</string>
    <string name="lemon_sc">添加收藏</string>
    <string name="lemon95_rm_movie">热门播放</string>
    <string name="lemon_serial">选择剧集</string>
    <string name="lemon95_serial_all">全部剧集</string>
    <string name="load">加载中...</string>
    <string name="lemon95_login">扫码登录</string>
    <string name="lemon95_ts">长按确认键删除选项</string>
    <string name="lemon95_mz">免责申明</string>
    <string name="lemon95_lxfs">联系方式</string>
    <string name="lemon95_email">企业邮箱：lemon@clublemon.com</string>
    <string name="lemon95_tel">客户电话：4008931993</string>
    <string name="lemon95_msg">扫描二维码下载柠檬视频手机APP，实现手机与电视娱乐互动</string>
    <string name="lemon95_gycon">柠檬视频专心为你打造最好的观影服务，影片资源全部来自第三方合作伙伴和互联网资源，如果有侵害你的版权或其他利益，请与我们联系，我们将在第一时间做下架处理。</string>
    <string name="lemon95_pay">支付方式：</string>
    <string name="lemon95_pay1">1、直接用微信扫描屏幕二维码完成支付。</string>
    <string name="lemon95_pay2">2、直接在影檬APP点击影片完成支付。</string>
    <string name="lemon_pay_per">该影片为私人定制影片，试看5分钟，打赏2元看全片</string>


    <!-- viewpager 标题栏字体-->
    <string name="fzlt_zhun_hei">FZLTZHUNHEI_GBK.ttf</string>
    <string name="fzlt_cu_hei">FZLTHC_GBK.ttf</string>

    <string name="nav_tab_normal_ttf">@string/fzlt_zhun_hei</string>
    <string name="nav_tab_focus_ttf">@string/fzlt_cu_hei</string>
    <string name="title_activity_history">HistoryActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="lemon95_xinhao">信号源</string>
    <string name="lemon95_caidan">菜单</string>
    <string name="lemon95_live">直播</string>
    <string name="lemon95_live1">进入直播</string>
    <string name="lemon95_live_cctv">央视</string>
    <string name="lemon95_live4">卫视</string>
    <string name="lemon95_live5">高清</string>
    <string name="lemon95_live6">地方台</string>
    <string name="lemon95_live7">特色台</string>
    <string name="lemon95_menu">菜单</string>
    <string name="lemon95_juji">选集</string>
    <string name="lemon95_pianyuan">视频源</string>
    <string name="lemon95_jiema">解码器</string>
    <string name="lemon95_pingmu">画幅</string>
    <string name="lemon95_shengdao">声道</string>
    <string name="sdk_video_connect_server_text">努力连接中...</string>
    <string name="sdk_video_connect_loading_text">加载数据中...</string>
</resources>
